Handle duplicate timelogs without deleted filter